<resources>
    <string name="app_name">Recycler</string>
    <string name="email_app">EMAIL</string>
    <string name="password_app">CONTRASEÑA</string>
    <string name="LOG_IN">INICIAR SESIÓN</string>
    <string name="register">Registrar</string>
    <string name="recover_password">¿Recuperar contraseña?</string>
    <string name="re_password">Recuperar contraseña</string>
    <string name="email">Email</string>
    <string name="email_re">CORREO ELECTRÓNICO</string>
    <string name="password">Contraseña</string>
    <string name="TO_REGISTER">REGISTRAR</string>
    <string name="NAMES">NOMBRES</string>
    <string name="Names_input">Nombres</string>
    <string name="SURNAMES">APELLIDOS</string>
    <string name="Surnames_input">Apellidos</string>
    <string name="MOBILE">CELULAR</string>
    <string name="Mobile_input">Celular</string>
    <string name="CONFIRM_PASSWORD">CONFIRMAR CONTRASEÑA</string>
    <string name="Confirm_input">Confirmar contraseña</string>
    <string name="CANCEL">CANCELAR</string>
    <string name="SAVE">GUARDAR</string>


    <string name="registering">Registrando…</string>
    <string name="sending">Enviando…</string>
    <string name="have_registered">Escriba el correo electrónico con el que se ha registrado</string>
    <string name="SEND">ENVIAR</string>

    <string name="RECYCLE">RECICLAR</string>
    <string name="ACCUMULATED_POINTS">PUNTOS ACUMULADOS</string>
    <string name="RECYCLED_MATERIALS">MATERIALES RECICLADOS</string>
    <string name="EVENTS">EVENTOS</string>
    <string name="RECYCLING_CRAFTS">COMPRA Y VENTA DE MANUALIDADES DE RECICLAJE</string>
    <string name="COLLECTION_POINTS">PUNTOS DE ACOPIO</string>
    <string name="REDEEM_POINTS">CANJEAR PUNTOS</string>

    <string name="val_empty">El campo no puede estar vacío</string>
    <string name="invalid_email">Correo electrónico inválido</string>
    <string name="passwords_match">Las contraseñas no coinciden</string>
    <string name="invalid_phone">Celular inválido</string>
    <string name="size_password">El tamaño de la contraseña debe ser mayor a 5 caracteres</string>
    <string name="contain_spaces">La contraseña no puede contener espacios</string>

    <string name="ALREADY_REGISTERED">CORREO ELECTRÓNICO YA REGISTRADO</string>
    <string name="logging_in">Iniciando sesión</string>
    <string name="toAccept">Aceptar</string>
    <string name="reset_password">Recibirás un email con un enlace para restablecer tu contraseña</string>
    <string name="failed_password">Error al restablecer contraseña</string>
    <string name="sign_off">Cerrar Sesión</string>
    <string name="DESCRIPTION">DESCRIPCIÓN</string>
    <string name="description_in">Descripción</string>
    <string name="BEHIND">ATRÁS</string>
    <string name="DATE">FECHA</string>
    <string name="date_in">Fecha</string>
    <string name="stock_code">Código de Acopio</string>
    <string name="POINTS">PUNTOS</string>
    <string name="points_in">Puntos</string>
    <string name="IMAGE">Imagen</string>
    <string name="image_in">Imagen</string>
    <string name="GET_GPS">OBTENER UBICACIÓN</string>
    <string name="Send">Enviar</string>
    <string name="Cancel">Cancelar</string>
    <string name="PURCHASE_MATERIALS">COMPRA DE MATERIALES DE RECICLAJE</string>
    <string name="QUALIFICATION">TÍTULO</string>
    <string name="title_in">Título</string>
    <string name="price_in">Precio</string>
    <string name="PRICE">PRECIO</string>
    <string name="WHATSAPP_NUMBER">NÚMERO DE WHATSAPP</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="plastic_bottles">Botellas Plásticas</string>
    <string name="paperboard">Cartón</string>
    <string name="number_bottles">mínimo 1 - máximo 20 de botellas</string>
    <string name="number_paperboard">mínimo 1kg - máximo 2kg de cartón</string>

    <string name="checking_connection">Comprobando conexión…</string>
    <string name="getting_location">Obteniendo Ubicación…</string>
    <string name="sending_request">Enviando solicitud…</string>
    <string name="posting">Publicando…</string>
    <string name="loading_data">Cargando algunos datos…</string>
    <string name="at_time">Sólo puede actualizar un campo a la vez</string>
    <string name="Activate_GPS">El sistema GPS esta desactivado, Activar para continua</string>
    <string name="confirm">CONFIRMAR</string>
    <string name="Permission_request">Solicitud de permiso</string>
    <string name="on_the_map">Sin el permiso de localización no podemos ubicarlo en el punto de acopio, si niega de nuevo tendrá que otorgar permisos manualmente.</string>
    <string name="Conf">Confirmar</string>
    <string name="Failed_location">Error al obtener ubicación</string>
    <string name="This_permission_location">Este permiso debe ser activado para poder ver su ubicación</string>
    <string name="camera_permission">Se requiere permiso de la cámara para usar la cámara.</string>
    <string name="collection_location">Ubicación de Acopio</string>
    <string name="coordinate_message">Para poder enviar su solicitud es necesario la ubicación del acopio</string>
    <string name="stock_photo">Foto de Acopio</string>
    <string name="_photo">Foto</string>
    <string name="photo_message">Para poder enviar su solicitud es necesario la foto del acopio</string>
    <string name="for_posting">Se necesita una foto para su publicación</string>
    <string name="Only_values">Sólo se aceptan valores de 1 a 20</string>
    <string name="Only_values_price">Sólo se aceptan valores de 1 a más</string>
    <string name="valid_number">Ingrese un número válido</string>
    <string name="Only_values_kg">Sólo se aceptan valores de 1 a 2 Kg</string>
    <string name="invalid_code">Código inválido</string>
    <string name="number_units">Cantidad de Unidades</string>
    <string name="select_least">Seleccione al menos una opción para poder enviar su solicitud</string>
    <string name="error">Ocurrió un error</string>
    <string name="error_occurred">Ocurrió un error, intente volver a enviar su solicitud, si el problema continua ponerse en contacto con Recycle.</string>
    <string name="posting_art">Ocurrió un error, intente publicar nuevamente, si el problema continua ponerse en contacto con Recycle.</string>
    <string name="sent_request">Solicitud Enviada</string>

    <string name="an_error_occurred">Ocurrió un error</string>
    <string name="an_error_message">Ocurrió un error, si el problema continua ponerse en contacto con Recycle.</string>
    <string name="loading_approved">Cargando lista…</string>
    <string name="request_detail">Detalle de Solicitud</string>
    <string name="to_return">Regresar</string>
    <string name="in_review">En revisión</string>
    <string name="STATE_">ESTADO: </string>
    <string name="_0">0</string>
    <string name="DATE_">FECHA:</string>
    <string name="points_0">Puntos:</string>
    <string name="request_list">Lista de solicitudes</string>
    <string name="title">Titulo</string>
    <string name="symbol">S/.</string>
    <string name="zero">,00</string>
    <string name="material_detail">Detalle de Material</string>
    <string name="craft_detail">Detalle de Manualidad</string>
    <string name="price_">Precio</string>
    <string name="quantity">Cantidad</string>
    <string name="description">Descripción</string>
    <string name="whatsApp_number">Número de whatsapp</string>
    <string name="try_again">No pudimos abrir whatsapp, intentelo de nuevo</string>
    <string name="publication">Hola me interesa tu publicación</string>
    <string name="events">EVENTOS</string>
    <string name="events_">EVENTO</string>
    <string name="Name">Evento</string>
    <string name="to_post">Publicar</string>
    <string name="publications">Publicaciones</string>
    <string name="post_">PUBLICAR</string>
    <string name="MY_PUBLICATIONS">MIS PUBLICACIONES</string>
    <string name="detail_">Detalle</string>
    <string name="to_update">Actualizar</string>
    <string name="RELOAD">VOLVER A CARGAR</string>
    <string name="Alert">Alerta</string>
    <string name="title_activity_maps">Map</string>

    <string name="Getting_Location">Obteniendo Ubicación…</string>
    <string name="Here_you_are">Aquí estás</string>
    <string name="redeem_points">Canjear Puntos</string>
    <string name="prize">Premio</string>
    <string name="points_required">Puntos requeridos: </string>
    <string name="Lorem">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen.</string>
    <string name="BILL">CUENTA</string>
</resources>