<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:id="@+id/relativeLayout_click"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/points_total_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points_0"
                android:textColor="@color/black"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/points_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/points_total_text"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/points_total_text"
                android:layout_marginTop="5dp"
                android:text="@string/DATE_"
                android:textColor="@color/black"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/date_text_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/points_total"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/points_total_text"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/estate_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/date_text_date"
                android:text="@string/STATE_"
                android:textColor="@color/black"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/estate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/date_text_date"
                android:layout_marginStart="3dp"
                android:layout_toEndOf="@+id/estate_text"
                android:text="@string/in_review"
                android:textColor="@color/black"
                android:textSize="19sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>